xmobar/xmobar-dual.errors

xmobar-dual.hs:60:40: error:
    lexical error in string/character literal at character '\58176'
   |
60 |         Run Network "wlp59s0" ["-t","直:<rx>kB/s <tx>kB/s","-H","200","-L","10","-h","#FFB6B0","-l","#CEFFAC","-n","#FFFFCC"] 10,
   |                                        ^
